tests/controllers/resources/namespaced/dns-manipulation-si.yaml
# SPDX-License-Identifier: Apache-2.0
# Copyright 2023 Authors of Nimbus

apiVersion: intent.security.nimbus.com/v1alpha1
kind: SecurityIntent
metadata:
  name: dns-manipulation
spec:
  intent:
    id: dnsManipulation
    description: "An adversary can manipulate DNS requests to redirect network traffic and potentially reveal end user activity."
    action: Block
    severity: Medium
