tests/controllers/resources/namespaced/dns-manipulation-sib.yaml
# SPDX-License-Identifier: Apache-2.0
# Copyright 2023 Authors of Nimbus

apiVersion: intent.security.nimbus.com/v1alpha1
kind: SecurityIntentBinding
metadata:
  name: dns-manipulation-binding
spec:
  intents:
    - name: dns-manipulation
  selector:
    WorkloadSelector:
      matchLabels:
        app: nginx
